--- a/-2.Practice/03.System.OS/CMakeLists.txt
+++ b/-2.Practice/03.System.OS/CMakeLists.txt
@@ -9,10 +9,13 @@ set(HEADER_FILES if.h)
 set(EXE_SOURCE_FILES import_if.c)
 set(DLL_SOURCE_FILES export_if.c ../00.Base/base_macro.h)
 
-
+if (UNIX)
+    set(OS_LIBRARIES dl)
+endif ()
 
 add_library(${PROJECT_NAME}_export_if SHARED ${DLL_SOURCE_FILES} ${HEADER_FILES})
 add_executable(${PROJECT_NAME}_import_if ${EXE_SOURCE_FILES} ${HEADER_FILES})
 add_executable(${PROJECT_NAME}_import_dlsym_if import_dlsym_if.c ${HEADER_FILES})
 
 target_link_libraries(${PROJECT_NAME}_import_if ${PROJECT_NAME}_export_if)
+target_link_libraries(${PROJECT_NAME}_import_dlsym_if ${OS_LIBRARIES})
