--- a/_2.Practice/CMakeLists.txt
+++ b/_2.Practice/CMakeLists.txt
@@ -35,5 +35,6 @@ include_directories(00.Base)
 
 add_subdirectory(03.System.OS)
 add_subdirectory(04.Language)
+add_subdirectory(05.Memory)
 
 add_library(tests_main STATIC 00.Base/catch2/catch.hpp 00.Base/tests_main.cpp)
