07.File Базовые функции работы с файлами. Чтение.

--- a/_2.Practice/05.Memory/CMakeLists.txt
+++ b/_2.Practice/05.Memory/CMakeLists.txt
@@ -5,15 +5,18 @@ project(05.Memory)
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 include_directories(.)
 
-set(SIMPLE_MAIN simple_main.c)
+if (NOT UNIX)
+    set(SIMPLE_MAIN simple_main.c)
+else()
+    set(SIMPLE_MAIN empty.c)
+endif ()
 
-
-if( (UNIX AND NOT APPLE) OR WIN32)
+if ((UNIX AND NOT APPLE) OR WIN32)
     add_executable(${PROJECT_NAME}_simple_main ${SIMPLE_MAIN})
     set_target_properties(${PROJECT_NAME}_simple_main PROPERTIES COMPILE_OPTIONS -Wattributes)
 endif ()
 
-if(UNIX AND NOT APPLE)
+if (UNIX AND NOT APPLE)
     set_target_properties(${PROJECT_NAME}_simple_main PROPERTIES COMPILE_OPTIONS -Wattributes)
 endif ()
 
