--- a/_2.Practice/07.File/CMakeLists.txt
+++ b/_2.Practice/07.File/CMakeLists.txt
@@ -5,7 +5,7 @@ project(07.File)
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 include_directories(.)
 
-set(SIMPLE_MAIN base_main.c)
+set(SIMPLE_MAIN base_main.c property.h property.c)
 
 
 add_executable(${PROJECT_NAME}_base_main ${SIMPLE_MAIN})
