--- a/_2.Practice/CMakeLists.txt
+++ b/_2.Practice/CMakeLists.txt
@@ -38,5 +38,6 @@ add_subdirectory(04.Language)
 add_subdirectory(05.Memory)
 add_subdirectory(07.File)
 add_subdirectory(08.Socket)
+add_subdirectory(09.Multithreading)
 
 add_library(tests_main STATIC 00.Base/catch2/catch.hpp 00.Base/tests_main.cpp)
