--- a/_2.Practice/10.Synchrinized/CMakeLists.txt
+++ b/_2.Practice/10.Synchrinized/CMakeLists.txt
@@ -12,6 +12,9 @@ else ()
     set(SYSTEM_LIBRARIES ws2_32)
 endif ()
 set(MONITOR_SOURCES monitor_impl.c)
+set(MONITOR_EXECUTE_SOURCES monitor_execute.c)
 
-add_executable(${PROJECT_NAME}_monitor ${MONITOR_SOURCES})
-target_link_libraries(${PROJECT_NAME}_monitor ${SYSTEM_LIBRARIES})
+add_library(${PROJECT_NAME}_monitor_impl STATIC ${MONITOR_SOURCES})
+target_link_libraries(${PROJECT_NAME}_monitor_impl ${SYSTEM_LIBRARIES})
+add_executable(${PROJECT_NAME}_monitor_execute ${MONITOR_EXECUTE_SOURCES})
+target_link_libraries(${PROJECT_NAME}_monitor_execute ${PROJECT_NAME}_monitor_impl ${SYSTEM_LIBRARIES})
