04.Language преобразование binary в hex

--- a/_2.Practice/04.Language/CMakeLists.txt
+++ b/_2.Practice/04.Language/CMakeLists.txt
@@ -12,3 +12,4 @@ set(FUNCTION_MAIN fun_main.c)
 add_executable(${PROJECT_NAME}_basic_main ${SIMPLE_MAIN})
 add_executable(${PROJECT_NAME}_environment_main ${ENVIRONMENT_MAIN})
 add_executable(${PROJECT_NAME}_function_main ${FUNCTION_MAIN})
+add_executable(${PROJECT_NAME}_binary_to_hex binary_to_hex.c)
