Каркас для курсовой

--- a/_4.OPCUA/tests/CMakeLists.txt
+++ b/_4.OPCUA/tests/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.2.1)
 project(tests CXX)
 
-add_executable(${PROJECT_NAME} main.cpp catch.hpp c_default_server.cpp client_events.c ../open62541.c)
+add_executable(${PROJECT_NAME} main.cpp catch.hpp c_default_server.cpp client_events.c ../open62541.c ../main_server.c ../main_algorithm.c default_server.cpp default_server.h)
 set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 14)
 if (WIN32)
     target_link_libraries(${PROJECT_NAME} ws2_32 iphlpapi)
