open62541 для macos

--- a/_4.OPCUA/CMakeLists.txt
+++ b/_4.OPCUA/CMakeLists.txt
@@ -11,14 +11,26 @@ if (WIN32)
     set(OPCUA_LIBRARIES ws2_32 iphlpapi)
     target_link_libraries(${PROJECT_NAME} ws2_32 iphlpapi)
 elseif (UNIX)
-    include_directories(unix)
-    set(OPCUA_SOURCES unix/open62541.c unix/open62541.h)
+    if (APPLE)
+        include_directories(/usr/local/include)
+        target_link_directories(${PROJECT_NAME} PRIVATE /usr/local/lib/)
+    else ()
+        include_directories(unix)
+        set(OPCUA_SOURCES unix/open62541.c unix/open62541.h)
+    endif ()
 endif ()
-add_library(opcua STATIC ${OPCUA_SOURCES})
-target_link_libraries(opcua PUBLIC ${OPCUA_LIBRARIES})
 
-set_property(TARGET ${PROJECT_NAME} PROPERTY C_STANDARD 99)
-target_link_libraries(${PROJECT_NAME} opcua)
+if (OPCUA_SOURCES)
+    add_library(opcua STATIC ${OPCUA_SOURCES})
+    target_link_libraries(opcua PUBLIC ${OPCUA_LIBRARIES})
+
+    set_property(TARGET ${PROJECT_NAME} PROPERTY C_STANDARD 99)
+    target_link_libraries(${PROJECT_NAME} opcua)
+else ()
+    set_property(TARGET ${PROJECT_NAME} PROPERTY C_STANDARD 99)
+    target_link_libraries(${PROJECT_NAME} open62541)
+endif ()
+
 if (BUILD_TESTING)
     add_subdirectory(tests)
 endif ()
